# Tiffin_Service_CRM

./: .gitignore  design_guidelines.json
.emergent/: emergent.yml
backend/: auth_utils.py  local_memory_db.py  pyproject.toml  requirements.txt  server.py
backend/tests/: test_tiffinflow_backend.py  test_tiffinflow_p1.py
frontend/: craco.config.js  jsconfig.json  package-lock.json  package.json  proxy.js  tailwind.config.js
frontend/app/: layout.jsx
frontend/app/[[...slug]]/: page.jsx
frontend/public/: index.html  manifest.json  sw.js
frontend/src/: App.css  App.js  index.css
frontend/src/components/: AppShell.jsx  BottomNav.jsx  InstallAppButton.jsx  NotificationBell.jsx  ProtectedRoute.jsx  RightGutter.jsx  ScrollableDrawerContent.jsx  Sidebar.jsx  TopHeader.jsx
frontend/src/config/: permissions.js
frontend/src/lib/: api.js  auth.js  push.js
frontend/src/pages/: Admin.jsx  AdminMenu.jsx  AdminPlans.jsx  Calendar.jsx  Delivery.jsx  Home.jsx  Landing.jsx  Login.jsx  Onboarding.jsx  PaymentSuccess.jsx  Plans.jsx  Register.jsx  Track.jsx  Wallet.jsx
frontend/src/views/: AdminKitchenSchedule.jsx  AdminMenu.jsx  AdminPlans.jsx  AdminSettings.jsx  Calendar.jsx  Checkout.jsx  Home.jsx  Landing.jsx  Login.jsx  Menu.jsx  Onboarding.jsx  Plans.jsx  Profile.jsx  Register.jsx  Track.jsx  (+1 more)
frontend/supabase/: README.md  schema.sql  seed.sql
memory/: PRD.md
test_reports/: iteration_1.json  iteration_2.json  iteration_3.json
test_reports/pytest/: p1_results.xml  p1_results_iter3.xml  pytest_results.xml  regression_results.xml  regression_results_iter3.xml
(+23 files in other folders)
