[tool.poetry]
name = "tiffinflow-backend"
version = "0.1.0"
description = "Local FastAPI backend for Tiffin Center."
authors = ["Tiffin Center"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "0.110.1"
uvicorn = "0.25.0"
motor = "3.3.1"
pymongo = "4.5.0"
pydantic = { version = "2.13.4", extras = ["email"] }
python-dotenv = "1.2.2"
bcrypt = "4.1.3"
pyjwt = "2.12.1"
cryptography = "48.0.0"
py-vapid = "1.9.1"
pywebpush = "2.0.0"
python-multipart = "0.0.28"
stripe = "15.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.3"
requests = "2.33.1"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
